# GetAVInfo

./: CMakeLists.txt  main.cpp
